# DesCryptGal

descryptgal/: __main__.py  des.py  funcandvar.py
genel/: README.md  pyproject.toml
genel/descryptgal/: ayardosyasi.py
